app/assets/stylesheets/houston/feedback/feedback.scss
#import_csv_field {
  display: none;
}

#search_feedback {
  margin: 0;
  
  input[type="search"] {
    margin: 0;
    width: 100%;
    box-sizing: border-box;
    height: 2.25em;
    padding: 0.25em 1em;
  }
}

#search_report {
  margin: 0;
  position: relative;
  top: -1em;
  color: #888;
  font-size: 0.88em;
}

#results {
  margin-left: 0;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.feedback-comment {
  position: relative;
  
  &.feedback-comment-unread {
    font-weight: 500;
  }
  
  .feedback-metadata {
    font-size: 0.88em;
    color: #888;
    line-height: 16px;
  }
}

.feedback-search-result {
  .feedback-snippet {
    padding: 0.66em 1em;
    border-radius: 3px;
    overflow: hidden;
  }
  
  &.selected .feedback-snippet { background: rgba(128, 212, 255, 0.2); }
  &:focus { outline: 0; }
  
  .feedback-customer {
    font-size: 0.88em;
    font-weight: bold;
  }
  
  .feedback-metadata {
    font-size: 0.88em;
    color: #888;
    display: block;
    float: right;
  }
  
  .avatar {
    margin-right: 0.25em;
    vertical-align: top;
    
    &.avatar-empty {
      background: rgba(0,0,0,0.1);
      height: 16px;
      content: '';
      display: block;
    }
  }
  
  .feedback-text { clear: both; }
  .feedback-text em {
    font-style: normal;
    display: inline-block;
    background: rgba(255, 255, 0, 0.12);
  }
  
  .feedback-reporter { display: block; float: left; }
  .feedback-created { display: block; float: right; }
  
  .feedback-tag-list {
    position: absolute;
    left: 100%;
    top: 0;
    padding-left: 5.52486187845304%;
    width: 100%;
  }
}

#feedback {
  &.feedback-selected .feedback-search-result .feedback-tag-list { display: none; }
}

.feedback-digest .feedback-comment {
  margin-bottom: 3em;
}

.feedback-edit-comment,
.feedback-digest .feedback-comment {
  h3 {
    font-size: 1.25em;
    font-weight: 400;
    line-height: 1em;
    margin: 0;
    height: 1em;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    padding-right: 2em;
  }
  
  .avatar {
    float: left;
    margin: 0.25em 0.5em 0 0;

    &.avatar-empty {
      background: rgba(0,0,0,0.1);
      height: 24px;
      content: '';
      display: block;
    }
  }
  
  .feedback-reporter::after { content: ' • '; }
  .feedback-reporter, .feedback-created { vertical-align: bottom; }
}

.feedback-edit-comment {
  .feedback-comment-close {
    position: absolute;
    top: 0;
    right: 0;
    font-size: 20px;
    color: #e4e4e4;
    
    &:hover { color: #005580; }
  }
  
  .btn-edit, .btn-save, .btn-read { float: right; }
  
  .btn-save,
  .feedback-text.edit, 
  .feedback-customer-edit { display: none; }
  
  .feedback-text textarea {
    height: 18em;
    width: 100%;
    box-sizing: border-box;
  }
  .feedback-text.markdown { 
    overflow-y: auto;
    height: 18em;
    margin-bottom: 10px;
  }
  
  &.edit-text {
    .feedback-customer { display: none; }
    .feedback-customer-edit {
      display: block;
      input { margin: 0; }
    }
    
    .feedback-text.markdown { display: none; }
    .btn-save {
      display: inline-block;
      margin-left: 0.5em;
    }
    .feedback-text.edit { display: block; }
  }
}

.feedback-tags {
  background: #f0f0f0;
  margin: 0.5em -0.5em;
  padding: 0.5em;
  border-radius: 3px;
  
  input {
    margin: 0.5em 0 0 0;
  }
}

.feedback-project .label {
  font-size: 11.844px;
  line-height: 14px;
  margin-right: 0.33em;
}

.feedback-tag {
  display: inline-block;
  padding: 2px 4px;
  font-size: 11.844px;
  line-height: 14px;
  color: #ffffff;
  white-space: nowrap;
  vertical-align: baseline;
  background-color: #aaa;
  border-radius: 3px;
  margin-right: 0.33em;
  
  a.feedback-remove-tag {
    width: 14px;
    text-align: center;
    margin: -2px -2px -2px 0;
    padding: 2px;
    cursor: pointer;
    color: white;
    
    &:hover { color: #005580; }
  }
}

#feedback_csv_import_modal {
  width: 640px;
  
  .modal-body {
    padding: 0;
    max-height: none;
    overflow: visible;
  }
  
  .span6 {
    border-right: 1px solid transparent;
    padding-right: 1.06382978723404%;
  }
  
  .span6 + .span6 {
    margin-left: 0;
    padding-left: 1.06382978723404%;
    border-left: 1px solid #f0f0f0;
    border-right: none;
    padding-right: 0;
  }
  
  .instructions {
    padding: 0 30px 0 15px; // room for the scrollbar
    box-sizing: border-box;
    
    background-color: #f5f5f5;
    border-bottom: 1px solid #ddd;
    
    .span6 {
      padding-top: 15px;
      padding-bottom: 5px;
    }
    
    .span6 + .span6 {
      border-left-color: #e8e8e8;
    }
    
    .csv-fields {
      padding: 0 8px 6px;
      white-space: nowrap;
    }
  }
  
  .scrollable-container {
    max-height: 300px;
    overflow-y: scroll;

    .csv-fields { padding: 8px 15px; }
  }
  
  .padded {
    border-top: 1px solid #ddd;
    background-color: #f5f5f5;
    padding: 8px 15px;
  }
  
  .feedback-tags { background: transparent; }
  
  .csv-field .example {
    display: block;
    color: #aaa;
    font-size: 0.88em;
  }
}

#new_feedback_modal {
  input[type="text"] {
    width: 100%;
    box-sizing: border-box;
    height: 30px;
  }
  textarea {
    width: 100%;
    box-sizing: border-box;
  }
  .feedback-tags {
    margin-top: 0;
    margin-bottom: 0;
  }
  form { margin-bottom: 0; }
}

#feedback_edit.affix {
  top: 90px;
  right: 20px;
  bottom: 52px;
  padding-left: 20px;

  .feedback-comment { 
    height: 100%;
  }
  .feedback-text.markdown {
    height: 60%; // Hack -> we should do this with JS to make it the height of the window minus other feedback controls
  }
}

.feedback-tag-cloud {
  margin: 0.33em 0 1.66em 0;
  
  li { display: inline-block; }
  
  a.feedback-tag {
    color: white;
    padding-right: 0;
    
    &:hover, &:active {
      text-decoration: none;
      background: #0088cc;
    }
  }
  
  .toggle-tag-visibility {
    color: rgb(194, 194, 194);
    text-decoration: none;
    
    &::before { content: 'more »'; }
    &:hover { color: #005580; }
    
    &.show-all-tags {
      &::before { content: '« less'; }
    }
  }
  
  .feedback-tag-count {
    background: rgba(255,255,255,0.3);
    display: inline-block;
    padding: 2px 6px;
    margin: -2px 0 -2px -2px;
    border-radius: 1em;
    text-align: center;
    font-size: 0.85em;
    position: relative;
    left: 4px;
  }
}

.feedback-comment.feedback-edit-comment {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;

  .feedback-text { flex-grow: 100; }

  &.edit-text .feedback-text.edit {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;

    textarea { flex-grow: 100; }
  }
}

